Initial TDA analysis script

--- a/InterpolationCode/Spatial_Error_Analysis_v2.ipynb
+++ b/InterpolationCode/Spatial_Error_Analysis_v2.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "4758e2ca",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "imports\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import pandas as pd\n",
@@ -16,15 +24,24 @@
     "pd.set_option('display.max_columns', None)\n",
     "import numpy as np\n",
     "import warnings\n",
-    "warnings.filterwarnings('ignore')"
+    "warnings.filterwarnings('ignore')\n",
+    "print(\"imports\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "4960d265",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "load DF and add year / season\n"
+     ]
+    }
+   ],
    "source": [
     "filePath = r\"C:\\Users\\forre\\Desktop\\REU\\TDA\\github\\UMR-TDA-2021\\LTRM data\\water_data_qfneg.csv\"\n",
     "df = pd.read_csv(filePath, low_memory = False)\n",
@@ -44,15 +61,24 @@
     "           1: 'WINTER',\n",
     "           2: 'WINTER'}\n",
     "df = df.replace({\"SEASON\" : seasons})\n",
-    "df[\"YEAR\"] = pd.DatetimeIndex(df[\"DATE\"]).year"
+    "df[\"YEAR\"] = pd.DatetimeIndex(df[\"DATE\"]).year\n",
+    "print(\"load DF and add year / season\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "54243d3a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "functions\n"
+     ]
+    }
+   ],
    "source": [
     "def predict_years(df, hashtable, naVar, year, k):\n",
     "    df[\"PREDICTED_\" + naVar] = df[naVar]\n",
@@ -253,12 +279,13 @@
     "    denominator = sum(denominator)\n",
     "    for i in range(len(distances)):\n",
     "        result += ((1/distances[i]) / denominator) * df.loc[neighbors[i]][naVar]\n",
-    "    return result"
+    "    return result\n",
+    "print(\"functions\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "0568910c",
    "metadata": {
     "scrolled": true,
@@ -269,6 +296,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Year: 1993\n",
+      "For TP we will interpolate 0 points.\n",
+      "TP interpolation success\n",
+      "For TP we will interpolate 0 points.\n",
+      "TP interpolation success\n",
+      "For TP we will interpolate 56 points.\n",
+      "TP interpolation success\n",
+      "For TP we will interpolate 0 points.\n",
+      "TP interpolation success\n",
+      "Year: 1994\n",
+      "For TP we will interpolate 64 points.\n",
+      "TP interpolation success\n",
+      "For TP we will interpolate 57 points.\n",
+      "TP interpolation success\n",
+      "For TP we will interpolate 63 points.\n",
+      "TP interpolation success\n",
+      "For TP we will interpolate 36 points.\n",
+      "TP interpolation success\n",
       "Year: 1995\n",
       "For TP we will interpolate 68 points.\n",
       "TP interpolation success\n",
@@ -353,7 +398,7 @@
       "Year: 2004\n",
       "For TP we will interpolate 39 points.\n",
       "TP interpolation success\n",
-      "For TP we will interpolate 36 points.\n",
+      "For TP we will interpolate 37 points.\n",
       "TP interpolation success\n",
       "For TP we will interpolate 38 points.\n",
       "TP interpolation success\n",
@@ -493,21 +538,12 @@
       "For TP we will interpolate 41 points.\n",
       "TP interpolation success\n",
       "For TP we will interpolate 19 points.\n",
-      "TP interpolation success\n",
-      "Year: 2020\n",
-      "For TP we will interpolate 0 points.\n",
-      "TP interpolation success\n",
-      "For TP we will interpolate 31 points.\n",
-      "TP interpolation success\n",
-      "For TP we will interpolate 33 points.\n",
-      "TP interpolation success\n",
-      "For TP we will interpolate 32 points.\n",
       "TP interpolation success\n"
      ]
     }
    ],
    "source": [
-    "years = [[x-1, x, x+1] for x in range(1995, 2021)]\n",
+    "years = [[x-1, x, x+1] for x in range(df['YEAR'].min(), df['YEAR'].max())]\n",
     "seasons = ['SPRING','SUMMER','FALL','WINTER']\n",
     "result_tp = pd.DataFrame()\n",
     "df_tp = df[df['TP'].notnull()].copy()\n",
@@ -530,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "eb23ea88",
    "metadata": {
     "scrolled": true,
@@ -541,6 +577,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Year: 1993\n",
+      "For TN we will interpolate 0 points.\n",
+      "TN interpolation success\n",
+      "For TN we will interpolate 0 points.\n",
+      "TN interpolation success\n",
+      "For TN we will interpolate 56 points.\n",
+      "TN interpolation success\n",
+      "For TN we will interpolate 0 points.\n",
+      "TN interpolation success\n",
+      "Year: 1994\n",
+      "For TN we will interpolate 64 points.\n",
+      "TN interpolation success\n",
+      "For TN we will interpolate 57 points.\n",
+      "TN interpolation success\n",
+      "For TN we will interpolate 63 points.\n",
+      "TN interpolation success\n",
+      "For TN we will interpolate 36 points.\n",
+      "TN interpolation success\n",
       "Year: 1995\n",
       "For TN we will interpolate 68 points.\n",
       "TN interpolation success\n",
@@ -598,7 +652,7 @@
       "Year: 2001\n",
       "For TN we will interpolate 40 points.\n",
       "TN interpolation success\n",
-      "For TN we will interpolate 37 points.\n",
+      "For TN we will interpolate 39 points.\n",
       "TN interpolation success\n",
       "For TN we will interpolate 40 points.\n",
       "TN interpolation success\n",
@@ -625,7 +679,7 @@
       "Year: 2004\n",
       "For TN we will interpolate 39 points.\n",
       "TN interpolation success\n",
-      "For TN we will interpolate 38 points.\n",
+      "For TN we will interpolate 39 points.\n",
       "TN interpolation success\n",
       "For TN we will interpolate 38 points.\n",
       "TN interpolation success\n",
@@ -765,21 +819,12 @@
       "For TN we will interpolate 41 points.\n",
       "TN interpolation success\n",
       "For TN we will interpolate 19 points.\n",
-      "TN interpolation success\n",
-      "Year: 2020\n",
-      "For TN we will interpolate 0 points.\n",
-      "TN interpolation success\n",
-      "For TN we will interpolate 31 points.\n",
-      "TN interpolation success\n",
-      "For TN we will interpolate 33 points.\n",
-      "TN interpolation success\n",
-      "For TN we will interpolate 32 points.\n",
       "TN interpolation success\n"
      ]
     }
    ],
    "source": [
-    "years = [[x-1, x, x+1] for x in range(1995, 2021)]\n",
+    "years = [[x-1, x, x+1] for x in range(df['YEAR'].min(), df['YEAR'].max())]\n",
     "seasons = ['SPRING','SUMMER','FALL','WINTER']\n",
     "result_tn = pd.DataFrame()\n",
     "df_tn = df[df['TN'].notnull()].copy()\n",
@@ -802,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "b5e2bb51",
    "metadata": {},
    "outputs": [
@@ -834,57 +879,57 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Count</th>\n",
-       "      <td>4334.000000</td>\n",
-       "      <td>4334.000000</td>\n",
+       "      <td>4335.000000</td>\n",
+       "      <td>4335.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Mean</th>\n",
-       "      <td>0.232222</td>\n",
-       "      <td>0.234202</td>\n",
+       "      <td>0.232168</td>\n",
+       "      <td>0.233804</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>STD</th>\n",
-       "      <td>0.179198</td>\n",
-       "      <td>0.167906</td>\n",
+       "      <td>0.179211</td>\n",
+       "      <td>0.166828</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Min</th>\n",
        "      <td>0.002000</td>\n",
-       "      <td>0.028000</td>\n",
+       "      <td>0.030878</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
        "      <td>0.147000</td>\n",
-       "      <td>0.154002</td>\n",
+       "      <td>0.154420</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
        "      <td>0.191000</td>\n",
-       "      <td>0.196449</td>\n",
+       "      <td>0.194889</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
        "      <td>0.262000</td>\n",
-       "      <td>0.262629</td>\n",
+       "      <td>0.261197</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Max</th>\n",
        "      <td>4.148000</td>\n",
-       "      <td>2.183460</td>\n",
+       "      <td>2.184316</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>MSE</th>\n",
-       "      <td>0.021725</td>\n",
+       "      <td>0.022246</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>RMSE</th>\n",
-       "      <td>0.147394</td>\n",
+       "      <td>0.149150</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>MAE</th>\n",
-       "      <td>0.071109</td>\n",
+       "      <td>0.074440</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -893,17 +938,17 @@
       ],
       "text/plain": [
        "            Actual    Predicted\n",
-       "Count  4334.000000  4334.000000\n",
-       "Mean      0.232222     0.234202\n",
-       "STD       0.179198     0.167906\n",
-       "Min       0.002000     0.028000\n",
-       "25%       0.147000     0.154002\n",
-       "50%       0.191000     0.196449\n",
-       "75%       0.262000     0.262629\n",
-       "Max       4.148000     2.183460\n",
-       "MSE       0.021725          NaN\n",
-       "RMSE      0.147394          NaN\n",
-       "MAE       0.071109          NaN"
+       "Count  4335.000000  4335.000000\n",
+       "Mean      0.232168     0.233804\n",
+       "STD       0.179211     0.166828\n",
+       "Min       0.002000     0.030878\n",
+       "25%       0.147000     0.154420\n",
+       "50%       0.191000     0.194889\n",
+       "75%       0.262000     0.261197\n",
+       "Max       4.148000     2.184316\n",
+       "MSE       0.022246          NaN\n",
+       "RMSE      0.149150          NaN\n",
+       "MAE       0.074440          NaN"
       ]
      },
      "metadata": {},
@@ -939,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "dd99b1e6",
    "metadata": {},
    "outputs": [],
@@ -949,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "5b203ab4",
    "metadata": {},
    "outputs": [
@@ -981,57 +1026,57 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Count</th>\n",
-       "      <td>4455.000000</td>\n",
-       "      <td>4455.000000</td>\n",
+       "      <td>4458.000000</td>\n",
+       "      <td>4458.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Mean</th>\n",
-       "      <td>3.196162</td>\n",
-       "      <td>3.166490</td>\n",
+       "      <td>3.194027</td>\n",
+       "      <td>3.172217</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>STD</th>\n",
-       "      <td>4.515879</td>\n",
-       "      <td>3.411764</td>\n",
+       "      <td>4.515109</td>\n",
+       "      <td>3.413673</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Min</th>\n",
-       "      <td>0.262000</td>\n",
-       "      <td>0.262000</td>\n",
+       "      <td>0.024000</td>\n",
+       "      <td>0.530476</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>1.978000</td>\n",
-       "      <td>2.077105</td>\n",
+       "      <td>1.974250</td>\n",
+       "      <td>2.062021</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>2.986000</td>\n",
-       "      <td>2.985498</td>\n",
+       "      <td>2.985000</td>\n",
+       "      <td>2.989643</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>4.034500</td>\n",
-       "      <td>3.907265</td>\n",
+       "      <td>4.033750</td>\n",
+       "      <td>3.925142</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Max</th>\n",
        "      <td>187.429000</td>\n",
-       "      <td>116.133635</td>\n",
+       "      <td>116.156329</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>MSE</th>\n",
-       "      <td>29.420090</td>\n",
+       "      <td>29.535096</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>RMSE</th>\n",
-       "      <td>5.424029</td>\n",
+       "      <td>5.434620</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>MAE</th>\n",
-       "      <td>0.955848</td>\n",
+       "      <td>1.008979</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1040,17 +1085,17 @@
       ],
       "text/plain": [
        "            Actual    Predicted\n",
-       "Count  4455.000000  4455.000000\n",
-       "Mean      3.196162     3.166490\n",
-       "STD       4.515879     3.411764\n",
-       "Min       0.262000     0.262000\n",
-       "25%       1.978000     2.077105\n",
-       "50%       2.986000     2.985498\n",
-       "75%       4.034500     3.907265\n",
-       "Max     187.429000   116.133635\n",
-       "MSE      29.420090          NaN\n",
-       "RMSE      5.424029          NaN\n",
-       "MAE       0.955848          NaN"
+       "Count  4458.000000  4458.000000\n",
+       "Mean      3.194027     3.172217\n",
+       "STD       4.515109     3.413673\n",
+       "Min       0.024000     0.530476\n",
+       "25%       1.974250     2.062021\n",
+       "50%       2.985000     2.989643\n",
+       "75%       4.033750     3.925142\n",
+       "Max     187.429000   116.156329\n",
+       "MSE      29.535096          NaN\n",
+       "RMSE      5.434620          NaN\n",
+       "MAE       1.008979          NaN"
       ]
      },
      "metadata": {},
@@ -1096,17 +1141,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "489e2099",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4334"
+       "4335"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1117,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "67677176",
    "metadata": {
     "scrolled": true,
@@ -1128,6 +1173,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Year: 1993\n",
+      "For VEL we will interpolate 0 points.\n",
+      "VEL interpolation success\n",
+      "For VEL we will interpolate 0 points.\n",
+      "VEL interpolation success\n",
+      "For VEL we will interpolate 87 points.\n",
+      "VEL interpolation success\n",
+      "For VEL we will interpolate 0 points.\n",
+      "VEL interpolation success\n",
+      "Year: 1994\n",
+      "For VEL we will interpolate 99 points.\n",
+      "VEL interpolation success\n",
+      "For VEL we will interpolate 85 points.\n",
+      "VEL interpolation success\n",
+      "For VEL we will interpolate 97 points.\n",
+      "VEL interpolation success\n",
+      "For VEL we will interpolate 42 points.\n",
+      "VEL interpolation success\n",
       "Year: 1995\n",
       "For VEL we will interpolate 94 points.\n",
       "VEL interpolation success\n",
@@ -1352,21 +1415,12 @@
       "For VEL we will interpolate 97 points.\n",
       "VEL interpolation success\n",
       "For VEL we will interpolate 34 points.\n",
-      "VEL interpolation success\n",
-      "Year: 2020\n",
-      "For VEL we will interpolate 0 points.\n",
-      "VEL interpolation success\n",
-      "For VEL we will interpolate 74 points.\n",
-      "VEL interpolation success\n",
-      "For VEL we will interpolate 73 points.\n",
-      "VEL interpolation success\n",
-      "For VEL we will interpolate 80 points.\n",
       "VEL interpolation success\n"
      ]
     }
    ],
    "source": [
-    "years = [[x-1, x, x+1] for x in range(1995, 2021)]\n",
+    "years = [[x-1, x, x+1] for x in range(df['YEAR'].min(), df['YEAR'].max())]\n",
     "seasons = ['SPRING','SUMMER','FALL','WINTER']\n",
     "result_vel = pd.DataFrame()\n",
     "df_vel = df[df['VEL'].notnull()].copy()\n",
@@ -1389,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "dab9ca1d",
    "metadata": {},
    "outputs": [
@@ -1427,12 +1481,12 @@
        "    <tr>\n",
        "      <th>Mean</th>\n",
        "      <td>0.242180</td>\n",
-       "      <td>0.245101</td>\n",
+       "      <td>0.244089</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>STD</th>\n",
        "      <td>0.345061</td>\n",
-       "      <td>0.329293</td>\n",
+       "      <td>0.327867</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Min</th>\n",
@@ -1447,31 +1501,31 @@
        "    <tr>\n",
        "      <th>50%</th>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.027123</td>\n",
+       "      <td>0.028995</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
        "      <td>0.420000</td>\n",
-       "      <td>0.451647</td>\n",
+       "      <td>0.450124</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Max</th>\n",
        "      <td>1.700000</td>\n",
-       "      <td>1.580000</td>\n",
+       "      <td>1.421378</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>MSE</th>\n",
-       "      <td>0.041285</td>\n",
+       "      <td>0.041855</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>RMSE</th>\n",
-       "      <td>0.203187</td>\n",
+       "      <td>0.204584</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>MAE</th>\n",
-       "      <td>0.103065</td>\n",
+       "      <td>0.105144</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1481,16 +1535,16 @@
       "text/plain": [
        "            Actual    Predicted\n",
        "Count  9168.000000  9168.000000\n",
-       "Mean      0.242180     0.245101\n",
-       "STD       0.345061     0.329293\n",
+       "Mean      0.242180     0.244089\n",
+       "STD       0.345061     0.327867\n",
        "Min       0.000000     0.000000\n",
        "25%       0.000000     0.000000\n",
-       "50%       0.000000     0.027123\n",
-       "75%       0.420000     0.451647\n",
-       "Max       1.700000     1.580000\n",
-       "MSE       0.041285          NaN\n",
-       "RMSE      0.203187          NaN\n",
-       "MAE       0.103065          NaN"
+       "50%       0.000000     0.028995\n",
+       "75%       0.420000     0.450124\n",
+       "Max       1.700000     1.421378\n",
+       "MSE       0.041855          NaN\n",
+       "RMSE      0.204584          NaN\n",
+       "MAE       0.105144          NaN"
       ]
      },
      "metadata": {},
@@ -1526,7 +1580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "52c1d1cc",
    "metadata": {},
    "outputs": [],
