--- a/InterpolationCode/DataInterpolation.ipynb
+++ b/InterpolationCode/DataInterpolation.ipynb
@@ -821,7 +821,10 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "native-supplier",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -3599,7 +3602,10 @@
    "cell_type": "code",
    "execution_count": 91,
    "id": "enhanced-canadian",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -4193,7 +4199,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
