--- a/pools_specific_EDA/Open River/Open River KMapper.ipynb
+++ b/pools_specific_EDA/Open River/Open River KMapper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "according-fifty",
+   "id": "based-leadership",
    "metadata": {},
    "source": [
     "### Imports"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "bottom-mozambique",
+   "execution_count": 3,
+   "id": "atmospheric-suicide",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "prospective-chile",
+   "id": "great-species",
    "metadata": {},
    "source": [
     "### Functions"
@@ -44,19 +44,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "id": "lovely-alcohol",
+   "execution_count": 4,
+   "id": "satisfied-insertion",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "EOL while scanning string literal (<ipython-input-76-137b3503531f>, line 114)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-76-137b3503531f>\"\u001b[1;36m, line \u001b[1;32m114\u001b[0m\n\u001b[1;33m    html_output_path = directory_path + \"\\\" + title + 'PCA_1' + 'all_var_' + 'Eps_' + str(DBSCAN_EPSILON) +'MinS_' + str(DBSCAN_MIN_SAMPLES) + 'NCUBES_' + str(N_CUBES) + 'PEROvLp_' + str(PERC_OVERLAP) + '.html'\u001b[0m\n\u001b[1;37m                                                                                                                                                                                                                  ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m EOL while scanning string literal\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def cluster_fun(X, DBSCAN_EPSILON = 20, DBSCAN_MIN_SAMPLES = 1, N_CUBES = [7,7], PERC_OVERLAP = [.5,.5]):\n",
     "    \"\"\"\n",
@@ -171,7 +162,7 @@
     "    \n",
     "    #Update the fw_graph colorbar, setting its title:\n",
     "    fw_graph.data[1].marker.colorbar.title = 'dist to<br>x-min'\n",
-    "    html_output_path = directory_path + \"\\\" + title + 'PCA_1' + 'all_var_' + 'Eps_' + str(DBSCAN_EPSILON) +'MinS_' + str(DBSCAN_MIN_SAMPLES) + 'NCUBES_' + str(N_CUBES) + 'PEROvLp_' + str(PERC_OVERLAP) + '.html'\n",
+    "    html_output_path = directory_path + \"\\\\\" + title + 'PCA_1' + 'all_var_' + 'Eps_' + str(DBSCAN_EPSILON) +'MinS_' + str(DBSCAN_MIN_SAMPLES) + 'NCUBES_' + str(N_CUBES) + 'PEROvLp_' + str(PERC_OVERLAP) + '.html'\n",
     "    html_output_path = html_output_path.replace(\":\",\"_\")\n",
     "    mapper.visualize(scomplex, path_html=html_output_path)\n",
     "    return(scomplex)"
@@ -179,7 +170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "general-winning",
+   "id": "surface-broadcasting",
    "metadata": {},
    "source": [
     "### Load data"
@@ -187,8 +178,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "technical-violence",
+   "execution_count": 5,
+   "id": "historic-correction",
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +384,7 @@
        "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,8 +397,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "promotional-grill",
+   "execution_count": 6,
+   "id": "grave-acting",
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +448,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "numerical-camera",
+   "id": "removed-faith",
    "metadata": {},
    "outputs": [
     {
@@ -478,8 +469,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "lyric-piano",
+   "execution_count": 7,
+   "id": "immediate-student",
    "metadata": {},
    "outputs": [
     {
@@ -506,72 +497,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "frank-rescue",
+   "execution_count": 8,
+   "id": "quarterly-freeware",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Stratum 1 SUMMER 93-00: ']\n",
-      "Estimated number of clusters: 6\n",
-      "Estimated number of noise points: 15\n",
-      "['Stratum 2 SUMMER 93-00: ']\n",
-      "Estimated number of clusters: 20\n",
-      "Estimated number of noise points: 16\n",
-      "['Stratum 3 SUMMER 93-00: ']\n",
-      "Estimated number of clusters: 12\n",
-      "Estimated number of noise points: 36\n",
-      "['Stratum 1 SUMMER 98-04: ']\n",
-      "Estimated number of clusters: 6\n",
-      "Estimated number of noise points: 15\n",
-      "['Stratum 2 SUMMER 98-04: ']\n",
-      "Estimated number of clusters: 12\n",
-      "Estimated number of noise points: 20\n",
-      "['Stratum 3 SUMMER 98-04: ']\n",
-      "Estimated number of clusters: 14\n",
-      "Estimated number of noise points: 41\n",
-      "['Stratum 1 SUMMER 01-13: ']\n",
-      "Estimated number of clusters: 15\n",
-      "Estimated number of noise points: 28\n",
-      "['Stratum 2 SUMMER 01-13: ']\n",
-      "Estimated number of clusters: 13\n",
-      "Estimated number of noise points: 39\n",
-      "['Stratum 3 SUMMER 01-13: ']\n",
-      "Estimated number of clusters: 16\n",
-      "Estimated number of noise points: 53\n",
-      "['Stratum 1 SUMMER 10-16: ']\n",
-      "Estimated number of clusters: 10\n",
-      "Estimated number of noise points: 11\n",
-      "['Stratum 2 SUMMER 10-16: ']\n",
-      "Estimated number of clusters: 13\n",
-      "Estimated number of noise points: 25\n",
-      "['Stratum 3 SUMMER 10-16: ']\n",
-      "Estimated number of clusters: 16\n",
-      "Estimated number of noise points: 38\n",
-      "['Stratum 1 SUMMER 14-20: ']\n",
-      "Estimated number of clusters: 10\n",
-      "Estimated number of noise points: 10\n",
-      "['Stratum 2 SUMMER 14-20: ']\n",
-      "Estimated number of clusters: 8\n",
-      "Estimated number of noise points: 21\n",
-      "['Stratum 3 SUMMER 14-20: ']\n",
-      "Estimated number of clusters: 15\n",
-      "Estimated number of noise points: 29\n"
+     "ename": "NameError",
+     "evalue": "name 'df_stratum_season_time_dict_list' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-8-f0ee6b5ad7e7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mdbclus_dict\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdf_stratum_season_time_dict_list\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m     \u001b[0mdbclus_dict\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcluster_fun\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df_stratum_season_time_dict_list' is not defined"
      ]
     }
    ],
    "source": [
-    "dbclus_dict = {}\n",
-    "for i in df_stratum_season_time_dict_list:\n",
-    "    dbclus_dict[str(list(i.keys()))]=cluster_fun(i)"
+    "# dbclus_dict = {}\n",
+    "# for i in df_stratum_season_time_dict_list:\n",
+    "#     dbclus_dict[str(list(i.keys()))]=cluster_fun(i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "elementary-disclaimer",
+   "execution_count": 9,
+   "id": "sudden-australia",
    "metadata": {},
    "outputs": [
     {
@@ -609,8 +560,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "id": "willing-examination",
+   "execution_count": 34,
+   "id": "raised-magazine",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,14 +571,400 @@
     "mapper_pca_output_dict = {}\n",
     "for key in df_stratum_season_time_dict:\n",
     "    for j in n_cubes:\n",
-    "        for k in perc_overlap: \n",
-    "            mapper_pca_output_dict[key] = mapper_pca_func(df_stratum_season_time_dict[key],key, N_CUBES = j, PERC_OVERLAP = k)"
+    "        for k in perc_overlap:\n",
+    "            newkey = key+\"ncubes_\"+str(j)+\"_overlap_\"+str(k)\n",
+    "            mapper_pca_output_dict[newkey] = mapper_pca_func(df_stratum_season_time_dict[key],key, N_CUBES = j, PERC_OVERLAP = k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "cultural-culture",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "90"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(mapper_pca_output_dict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "reliable-samoa",
+   "metadata": {},
+   "source": [
+    "Saving all outputs to json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "structural-fellowship",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "jsonFile = json.dumps(mapper_pca_output_dict)\n",
+    "f = open(\"All_graphs.json\",\"w\")\n",
+    "f.write(jsonFile)\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "alleged-revision",
+   "metadata": {},
+   "source": [
+    "Load mapper data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "knowing-street",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jsonFilePath = r\"All_graphs.json\"\n",
+    "jsonFile = open(jsonFilePath,\"r\")\n",
+    "data = json.load(jsonFile)\n",
+    "jsonFile.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "prostate-result",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "90"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(data.keys())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "driven-costume",
+   "metadata": {},
+   "source": [
+    "Pick one output to analyze"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "affecting-cookie",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stratum 2 SUMMER 01-13: ncubes_10_overlap_0.45\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['nodes', 'links', 'simplices', 'meta_data', 'meta_nodes'])"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#key = list(data.keys())[0]\n",
+    "key = \"Stratum 2 SUMMER 01-13: ncubes_10_overlap_0.45\"\n",
+    "print(key)\n",
+    "output = data[key]\n",
+    "output.keys()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fuzzy-anchor",
+   "metadata": {},
+   "source": [
+    "Function to "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "fourth-commissioner",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "160\n",
+      "54\n"
+     ]
+    }
+   ],
+   "source": [
+    "simplices = output.get(\"simplices\")\n",
+    "# Pick out the edges\n",
+    "edges = [item for item in simplices if len(item)==2]\n",
+    "# Pick out all nodes\n",
+    "nodes = output.get(\"nodes\").keys()\n",
+    "print(len(simplices))\n",
+    "print(len(edges))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "divine-basket",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Unpacks the list of lists to get every node that is connected to at least one other node with an edge\n",
+    "connected_nodes = [node for sublist in edges for node in sublist]\n",
+    "# Pick out the nodes that are its own connected component (not a connected node)\n",
+    "singles = [[node] for node in nodes if node not in connected_nodes]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "fifth-double",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['cube0_cluster3'],\n",
+       " ['cube0_cluster4'],\n",
+       " ['cube0_cluster5'],\n",
+       " ['cube0_cluster6'],\n",
+       " ['cube2_cluster2'],\n",
+       " ['cube2_cluster18'],\n",
+       " ['cube3_cluster10'],\n",
+       " ['cube4_cluster6'],\n",
+       " ['cube4_cluster9'],\n",
+       " ['cube5_cluster10'],\n",
+       " ['cube9_cluster1'],\n",
+       " ['cube9_cluster2'],\n",
+       " ['cube9_cluster3'],\n",
+       " ['cube9_cluster4'],\n",
+       " ['cube9_cluster6']]"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "singles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "boxed-chapel",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def connected_components(output):\n",
+    "    simplices = output.get(\"simplices\")\n",
+    "    # Pick out the edges\n",
+    "    pairs = [item for item in simplices if len(item)==2]\n",
+    "    # Pick out all nodes\n",
+    "    nodes = output.get(\"nodes\").keys()\n",
+    "    # Unpacks the list of lists to get every node that is connected to at least one other node with an edge\n",
+    "    connected_nodes = [node for sublist in edges for node in sublist]\n",
+    "    # Pick out the nodes that are its own connected component (not a connected node)\n",
+    "    singles = [[node] for node in nodes if node not in connected_nodes]\n",
+    "    \n",
+    "    # Build connected components\n",
+    "    components = []\n",
+    "    for a, b in pairs:\n",
+    "        for component in components:\n",
+    "            if a in component:\n",
+    "                for i, other_component in enumerate(components):\n",
+    "                    if b in other_component and other_component != component: # a, and b are already in different components: merge\n",
+    "                        component.extend(other_component)\n",
+    "                        components[i:i+1] = []\n",
+    "                        break # we don't have to look for other components for b\n",
+    "                else: # b wasn't found in any other component\n",
+    "                    if b not in component:\n",
+    "                        component.append(b)\n",
+    "                break # we don't have to look for other components for a\n",
+    "            if b in component: # a wasn't in in the component \n",
+    "                component.append(a)\n",
+    "                break # we don't have to look further\n",
+    "        else: # neither a nor b were found\n",
+    "            components.append([a, b])\n",
+    "            \n",
+    "    # Add the singles into the components\n",
+    "    print(\"Number of singles,\",len(singles))\n",
+    "    components.extend(singles)\n",
+    "    \n",
+    "    return components"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "incident-bargain",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of singles, 15\n"
+     ]
+    }
+   ],
+   "source": [
+    "components = connected_components(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "solar-bronze",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "37"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "37"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "gross-friendship",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "37"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(components)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "molecular-affiliation",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['cube0_cluster0',\n",
+       "  'cube1_cluster0',\n",
+       "  'cube2_cluster0',\n",
+       "  'cube2_cluster9',\n",
+       "  'cube3_cluster0',\n",
+       "  'cube3_cluster5',\n",
+       "  'cube3_cluster16',\n",
+       "  'cube4_cluster4',\n",
+       "  'cube5_cluster2'],\n",
+       " ['cube0_cluster1', 'cube1_cluster6'],\n",
+       " ['cube0_cluster2', 'cube1_cluster11'],\n",
+       " ['cube1_cluster1', 'cube2_cluster6'],\n",
+       " ['cube1_cluster2', 'cube2_cluster7'],\n",
+       " ['cube1_cluster3', 'cube2_cluster8'],\n",
+       " ['cube1_cluster4', 'cube2_cluster11'],\n",
+       " ['cube1_cluster5', 'cube2_cluster12'],\n",
+       " ['cube1_cluster7', 'cube2_cluster13'],\n",
+       " ['cube1_cluster8', 'cube2_cluster14'],\n",
+       " ['cube1_cluster9', 'cube2_cluster15'],\n",
+       " ['cube1_cluster10', 'cube2_cluster19'],\n",
+       " ['cube2_cluster1', 'cube3_cluster1'],\n",
+       " ['cube2_cluster3', 'cube3_cluster2'],\n",
+       " ['cube2_cluster4', 'cube3_cluster6'],\n",
+       " ['cube2_cluster5', 'cube3_cluster8'],\n",
+       " ['cube2_cluster10', 'cube3_cluster13'],\n",
+       " ['cube2_cluster16', 'cube3_cluster15'],\n",
+       " ['cube2_cluster17', 'cube3_cluster14', 'cube4_cluster12'],\n",
+       " ['cube3_cluster3', 'cube4_cluster1'],\n",
+       " ['cube3_cluster4', 'cube4_cluster2'],\n",
+       " ['cube3_cluster7', 'cube4_cluster3'],\n",
+       " ['cube3_cluster9', 'cube4_cluster5'],\n",
+       " ['cube3_cluster11', 'cube4_cluster7', 'cube3_cluster12'],\n",
+       " ['cube3_cluster17', 'cube4_cluster16'],\n",
+       " ['cube3_cluster18', 'cube4_cluster17'],\n",
+       " ['cube3_cluster19',\n",
+       "  'cube4_cluster14',\n",
+       "  'cube3_cluster20',\n",
+       "  'cube5_cluster7',\n",
+       "  'cube6_cluster3'],\n",
+       " ['cube4_cluster0', 'cube5_cluster0', 'cube6_cluster0', 'cube6_cluster1'],\n",
+       " ['cube4_cluster8', 'cube5_cluster1'],\n",
+       " ['cube4_cluster10', 'cube5_cluster3'],\n",
+       " ['cube4_cluster11', 'cube5_cluster4'],\n",
+       " ['cube4_cluster13', 'cube5_cluster6'],\n",
+       " ['cube4_cluster15', 'cube5_cluster8'],\n",
+       " ['cube4_cluster18', 'cube5_cluster9'],\n",
+       " ['cube5_cluster5',\n",
+       "  'cube6_cluster2',\n",
+       "  'cube7_cluster0',\n",
+       "  'cube8_cluster0',\n",
+       "  'cube9_cluster7'],\n",
+       " ['cube8_cluster1', 'cube9_cluster0'],\n",
+       " ['cube8_cluster2', 'cube9_cluster5']]"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "components"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sporting-veteran",
+   "id": "later-modem",
    "metadata": {},
    "outputs": [],
    "source": []
